k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comming-soon-app
  namespace: coming-soon
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: saeedamadan74/coming-soon:4
        ports:
        - containerPort: 81


---
apiVersion: v1
kind: Service
metadata:
  name: comming-soon-service
  namespace: coming-soon
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 81
    targetPort: 81
    nodePort: 30085
  type: LoadBalancer
