k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coming-soon-ingress
  namespace: coming-soon
spec:
  rules:
  - host: coming-soon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: comming-soon-service
            port:
              number: 81
